k8s/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-indexer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-index
spec:
  selector:
    matchLabels:
      app: blog-index
  replicas: 1
  template:
    metadata:
      labels:
        app: blog-index
    spec:
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: blog-index-pvc
      containers:
      - name: blog-index
        image: dustni/blogindex
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: "/pvc/blog"
            name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: blog-index
spec:
  selector:
    app: blog-index
  ports:
  - port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-index-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /index
          pathType: Prefix
          backend:
            serviceName: blog-index
            servicePort: 8080
